# opencine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.236a3e2  CMakeLists.txt.user.64dc068  ClipProcessorLayout.cpp  ClipProcessorLayout.h  ClipProcessorLayout.ui  Readme.md  Readme.txt  env_setup.sh
Source/CinemaDNGDecoder/: CMakeLists.txt  CinemaDNGDecoder.cpp  CinemaDNGDecoder.h  CinemaDNGFile.cpp  CinemaDNGFile.h  Defines.h  Main.cpp
Source/CinemaDNGInfo/: CMakeLists.txt  Main.cpp
Source/OCBackup/: CMakeLists.txt  OCBackup.cpp  OCBackup.h
Source/OCBackup/Controls/: DestinationsControl.cpp  DestinationsControl.h  DestinationsControl.ui
Source/OCBackup/Data/: DestinationsListItem.h  DriveListItem.h  ItemInfoQML.h  PathInfoQML.h  ThumbnailViewItem.h
Source/OCBackup/Interfaces/: IBackupView.h
Source/OCBackup/Layouts/: BackupLayout.cpp  BackupLayout.h  BackupLayout.ui
Source/OCBackup/Presenters/: BackupPresenter.cpp  BackupPresenter.h
Source/OCBackup/Services/: DriveTransferService.h  OCService.h
Source/OCBackup/Views/: BackupView.cpp  BackupView.h  BackupView.ui
Source/OCBackup/Widgets/: DestinationItem (copy).qml  DestinationItem.qml  DestinationsList.qml  DriveItem.qml  DriveList.qml  ScrollBar.qml  ThumbnailItem.qml  ThumbnailItem_backup.qml  ThumbnailView.qml
Source/OCCore/: CMakeLists.txt  DriveManager.h  FSHelper.h  OCCore.cpp  OCCore.h  OCImage.h
Source/OCCore/API/: IDataProvider.h  IDataTransfer.h
Source/OCCore/Events/: EventBus.h  IEventBus.h  IEventHandler.h  OCEvent.h  OCSignal.h  eventppImpl.h
Source/OCCore/Hash/: IHashGenerator.h  xxHashAdapter.h
Source/OCCore/Image/: BayerFramePreProcessor.cpp  BayerFramePreProcessor.h  BayerFrameProcessor.cpp  BayerFrameProcessor.h  BilinearDebayer.h  EndianHelper.h  FramePool.h  FrameProvider.cpp  FrameProvider.h  GEDIDebayer.h  IFrameProcessor.h  IImageLoader.h  ImageDefines.h  ImageProvider.cpp  ImageProvider.h  LibRawAdapter.h  MLVLoader.cpp  MLVLoader.h  NearestNeighborScaler.h  OCImage.h  SHOODAKDebayer.cpp  SHOODAKDebayer.h  TIFFLoader.cpp  TIFFLoader.h  ThumbnailGenerator.h  ThumbnailProvider.cpp  ThumbnailProvider.h
Source/OCCore/Interfaces/: IDriveManager.h
Source/OCCore/Log/: EasyLoggingAdapter.cpp  EasyLoggingAdapter.h  ILogger.cpp  ILogger.h  Log4cxxLoggingAdapter.cpp  Log4cxxLoggingAdapter.h  Logger.cpp  Logger.h  easylogging++.h  log4cxxLogger.cpp  log4cxxLogger.h
Source/OCCore/MVP/: MVP.h
Source/OCCore/Memory/: StaticAllocator.cpp  StaticAllocator.h
Source/OCCore/Task/: HashCheckTask.cpp  HashCheckTask.h  ITask.h  ITaskProgress.h  TaskManager.h  TransferTask.cpp  TransferTask.h
Source/OCCore/Transfer/: DriveTransfer.cpp  DriveTransfer.h  FileInfo.h  FileTransferInfo.h  HashCheck.h  ItemInfo.h  PathInfo.h  SequentialDriveTransfer.cpp  SequentialDriveTransfer.h
Source/OCLauncher/: CMakeLists.txt  OCLauncher.cpp  OCLauncher.h  OCLauncher_settings.json  test.json
Source/OCLauncher/Interfaces/: ILauncherView.h
Source/OCLauncher/Layouts/: LauncherLayout.cpp  LauncherLayout.h  LauncherLayout.ui
Source/OCLauncher/Presenters/: LauncherPresenter.h
Source/OCLauncher/Views/: LauncherView.cpp  LauncherView.h  LauncherView.ui
Source/OCcore/: CMakeLists.txt  DriveManager.h  OCcore.cpp  OCcore.h
Source/OCcore/API/: IDataProvider.h  IDataTransfer.h
Source/OCcore/Events/: EventBus.h  IEventBus.h  IEventHandler.h  OCEvent.h  OCSignal.h  eventppImpl.h
Source/OCcore/Hash/: IHashGenerator.h  xxHashAdapter.h
Source/OCcore/Image/: BaseOCL.cpp  BaseOCL.h  BayerFrameDownscaler.cpp  BayerFrameDownscaler.h  BayerFramePreProcessor.cpp  BayerFramePreProcessor.h  BilinearDebayer.cpp  BilinearDebayer.h  BilinearDebayerOMP.cpp  BilinearDebayerOMP.h  BilinearProcessorOCL.cpp  BilinearProcessorOCL.h  DebayerBilinear.cpp  DebayerBilinear.h  EndianHelper.h  FramePool.h  FrameProvider.cpp  FrameProvider.h  GEDIDebayer.cpp  GEDIDebayer.h  GEDIDebayerOMP.cpp  GEDIDebayerOMP.h  IDebayerProcessor.h  IFrameProcessor.cpp  IFrameProcessor.h  IImageLoader.h  IProcessorOCL.h  ImageDefines.h  ImageHelper.h  ImageProvider.cpp  ImageProvider.h  Kernels.cl  LibRawAdapter.h  MLVLoader.cpp  MLVLoader.h  NearestNeighborScaler.h  OCImage.cpp  OCImage.h  RawDump.cpp  RawDump.h  (+11 more)
Source/OCcore/Interfaces/: IDriveManager.h
Source/OCcore/Log/: EasyLoggingAdapter.cpp  EasyLoggingAdapter.h  ILogger.cpp  ILogger.h  Log4cxxLoggingAdapter.cpp  Log4cxxLoggingAdapter.h  Logger.cpp  Logger.h  easylogging++.h  log4cxxLogger.cpp  log4cxxLogger.h
Source/OCcore/Memory/: IAllocator.cpp  IAllocator.h  StaticAllocator.cpp  StaticAllocator.h
Source/OCcore/RawDump/: rawdump.cpp  rawdump.h
Source/OCcore/Task/: HashCheckTask.cpp  HashCheckTask.h  ITask.h  ITaskProgress.h  TaskManager.h  TransferTask.cpp  TransferTask.h
Source/OCcore/Transfer/: DriveTransfer.cpp  DriveTransfer.h  FileTransferInfo.h  HashCheck.h  ItemInfo.h  PathInfo.h  SequentialDriveTransfer.cpp  SequentialDriveTransfer.h
Source/OCui/: CMakeLists.txt  OCui.cpp  OCui.h
Source/OCui/Controls/: PlaybackSlider.cpp  PlaybackSlider.h  PlaybackSlider.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  TaskProgressDelegate.cpp  TaskProgressDelegate.h
Source/OCui/Helper/: QMLThumbnailProvider.cpp  QMLThumbnailProvider.h
Source/OpenCine/: CMakeLists.txt  CMakeLists.txt.user.374da1e  ClipInformationItem.cpp  ClipInformationItem.h  ClipInformationItem.ui  ClipManagerLayout.cpp  ClipManagerLayout.h  ClipManagerLayout.ui  ClipProcessorLayout.cpp  ClipProcessorLayout.h  IDataTransfer.cpp  IDataTransfer.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaExplorer.cpp  MediaExplorer.h  MediaExplorer.ui  MediaExplorerPresenter.cpp  MediaExplorerPresenter.h  MediaExplorerView.cpp  MediaExplorerView.h  MediaExplorerView.ui  PlaybackSlider.cpp  PlaybackSlider.h  PlaybackSlider.ui  PreviewPane.cpp  PreviewPane.h  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  Resources.qrc  TestPluginA.h  Tests.h
Source/ProcessingTest/: CMakeLists.txt  ProcessingTest.cpp  ProcessingTest.h  Thumbs.db
(+208 files in other folders)
