cmake_minimum_required(VERSION 3.2)
PROJECT(CinemaDNGInfo)

#FIND_PACKAGE(LibRaw REQUIRED)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB HEADER_FSILES *.h)

INCLUDE_DIRECTORIES("${OCCore_SOURCE_DIR}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME})
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} CinemaDNGDecoder OCCore)
endif()
