cmake_minimum_required(VERSION 2.8)
PROJECT(OCBackup)

CMAKE_POLICY(SET CMP0020 NEW)

set( CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5QuickWidgets REQUIRED)

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")
FILE(GLOB_RECURSE HEADER_FILES "*.h")
FILE(GLOB_RECURSE UI_FILES "*.ui")

QT5_WRAP_UI(UI_FILES_MOC ${UI_FILES})

INCLUDE_DIRECTORIES("${OCui_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${OCCore_SOURCE_DIR}")

IF(WIN32)
    ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${SOURCE_FILES} ${HEADER_FILES} ${UI_FILES_MOC})
ELSEIF(LINUX)
    ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${UI_FILES_MOC})
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} OCCore OCui xxHash)

QT5_USE_MODULES(${PROJECT_NAME} Widgets QuickWidgets)

FILE(COPY "Widgets" DESTINATION ${CMAKE_BINARY_DIR}/bin)
