cmake_minimum_required(VERSION 2.8)
PROJECT(OCui)

CMAKE_POLICY(SET CMP0020 NEW)

set( CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")
FILE(GLOB_RECURSE HEADER_FILES "*.h")
FILE(GLOB_RECURSE UI_FILES "*.ui")

QT5_WRAP_UI(UI_FILES_MOC ${UI_FILES})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${UI_FILES_MOC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

QT5_USE_MODULES(${PROJECT_NAME} Widgets)

FILE(COPY "Themes" DESTINATION ${CMAKE_BINARY_DIR}/bin)
FILE(COPY "Resources" DESTINATION ${CMAKE_BINARY_DIR}/bin)
FILE(COPY "Fonts" DESTINATION ${CMAKE_BINARY_DIR}/bin)
