cmake_minimum_required(VERSION 3.2)
PROJECT(OCui)

CMAKE_POLICY(SET CMP0020 NEW)

set( CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")
FILE(GLOB_RECURSE HEADER_FILES "*.h")
FILE(GLOB_RECURSE UI_FILES "*.ui")
FILE(GLOB_RECURSE QML_FILES "*.qml")

QT5_WRAP_UI(UI_FILES_MOC ${UI_FILES})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${UI_FILES_MOC} ${QML_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

include(GenerateExportHeader)
GENERATE_EXPORT_HEADER(${PROJECT_NAME} EXPORT_MACRO_NAME EXPORT_API EXPORT_FILE_NAME ${CMAKE_BINARY_DIR}/exports/${PROJECT_NAME}_export.h)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/exports)

QT5_USE_MODULES(${PROJECT_NAME} Widgets)

FILE(COPY "Themes" DESTINATION ${CMAKE_BINARY_DIR}/bin)
FILE(COPY "Resources" DESTINATION ${CMAKE_BINARY_DIR}/bin)
FILE(COPY "Fonts" DESTINATION ${CMAKE_BINARY_DIR}/bin)
